--- a/tasks/cat1.yml
+++ b/tasks/cat1.yml
@@ -5,7 +5,7 @@
   register: rpm_sig_audit
   always_run: yes
   changed_when: no
-  ignore_errors: yes
+  failed_when: no
   tags:
       - cat1
       - high
@@ -14,7 +14,7 @@
       - rpm
       - packages
 
-- name: "HIGH | V-38462 | AUDIT | The RPM package management tool must cryptographically verify the authenticity of all software packages during installation"
+- name: "HIGH | V-38462 | PATCH | The RPM package management tool must cryptographically verify the authenticity of all software packages during installation"
   lineinfile:
       state: absent
       dest: "{{ item }}"
@@ -83,7 +83,7 @@
       path: ~{{ item }}/.rhosts
   register: rhosts_audit
   always_run: yes
-  with_items: users.stdout_lines
+  with_items: "{{ users.stdout_lines }}"
   tags:
       - cat1
       - high
@@ -95,7 +95,7 @@
   file:
     state: absent
     dest: ~{{ item }}/.rhosts
-  with_items: users.stdout_lines
+  with_items: "{{ users.stdout_lines }}"
   tags:
       - cat1
       - high
@@ -107,7 +107,7 @@
   command: grep nullok /etc/pam.d/system-auth
   changed_when: false
   always_run: yes
-  ignore_errors: yes
+  failed_when: no
   register: nullok_audit
   tags:
       - cat1
@@ -129,7 +129,7 @@
 
 - name: "HIGH | V-38587 | AUDIT | The telnet-server package must not be installed"
   command: rpm -q telnet-server
-  ignore_errors: yes
+  failed_when: no
   always_run: yes
   changed_when: no
   register: telnet_server_audit
@@ -158,7 +158,7 @@
   register: telnet_service_audit
   changed_when: false
   always_run: yes
-  ignore_errors: yes
+  failed_when: no 
   tags:
       - cat1
       - high
@@ -172,7 +172,7 @@
     name: telnet
     state: stopped
     enabled: no
-  ignore_errors: yes
+  failed_when: no
   tags:
       - cat1
       - high
@@ -186,7 +186,7 @@
   always_run: yes
   register: rsh_server_audit
   changed_when: no
-  ignore_errors: yes
+  failed_when: no
 
 - name: "HIGH | V-38591 | PATCH | The rsh-server package must not be installed"
   yum:
@@ -205,7 +205,7 @@
   register: rsh_service_audit
   changed_when: false
   always_run: yes
-  ignore_errors: yes
+  failed_when: no
   tags:
       - cat1
       - high
@@ -221,6 +221,7 @@
     state: stopped
     enabled: no
   when: rsh_service_audit.rc == 0
+  failed_when: no
   tags:
       - cat1
       - high
@@ -231,7 +232,7 @@
 
 - name: "HIGH | V-38598 | AUDIT | The rexecd service must not be running"
   command: service rexec status
-  ignore_errors: yes
+  failed_when: no
   register: rexec_status_audit
   always_run: yes
   changed_when: no
@@ -247,6 +248,7 @@
       name: rexec
       state: stopped
   when: rexec_status_audit.rc == 0
+  failed_when: no
   tags:
       - cat1
       - high
@@ -256,7 +258,7 @@
 
 - name: "HIGH | V-38602 | AUDIT | The rlogind service must not be running"
   command: service rlogin status
-  ignore_errors: yes
+  failed_when: no
   register: rlogin_status_audit
   always_run: yes
   changed_when: no
@@ -271,6 +273,8 @@
   service:
     name: rlogin
     enabled: no
+    state: stopped
+  failed_when: no
   when: rlogin_status_audit.rc == 0
   tags:
       - cat1
@@ -282,7 +286,7 @@
 - name: "HIGH | V-38607 | AUDIT | The SSH daemon must be configured to use only the SSHv2 protocol"
   command: grep "Protocol 2" /etc/ssh/sshd_config
   register: proto2_audit
-  ignore_errors: yes
+  failed_when: no
   always_run: yes
   changed_when: no
   tags:
@@ -308,7 +312,7 @@
 
 - name: "HIGH | V-38614 | AUDIT | The SSH daemon must not allow authentication using an empty password"
   command: grep "PermitEmptyPasswords yes" /etc/ssh/sshd_config
-  ignore_errors: yes
+  failed_when: no
   always_run: yes
   changed_when: false
   register: ssh_empty_pass_audit
@@ -362,11 +366,12 @@
       - snmp
 
 # V-38666 checks can be found in not_automated.yml
+# HIGH | V-38666 | The system must use and update a DoD-approved virus scan program.
 
 - name: "HIGH | V-38668 | AUDIT | The x86 Ctrl-Alt-Delete key sequence must be disabled"
   command: grep "exec /sbin/shutdown" /etc/init/control-alt-delete.override
   register: ctrl_alt_del_audit
-  ignore_errors: yes
+  failed_when: no
   always_run: yes
   changed_when: no
   tags:
@@ -391,13 +396,15 @@
       - ctrl_alt_delete
 
 # V-38677 can be found in not_automated.yml
+# HIGH | V-38677 | The NFS server must not have the insecure file locking option enabled.
 
 - name: "HIGH | V-38701 | AUDIT | The TFTP daemon must operate in secure mode which provides access only to a single directory on the host file system"
   command: grep "server_args = -s" /etc/xinetd.d/tftp
   register: tftp_audit
+  changed_when: no
   always_run: yes
   when: "'tftp' in xinetd_services.stdout_lines"
-  ignore_errors: yes
+  failed_when: no
   tags:
       - cat1
       - high
@@ -414,7 +421,7 @@
       line: '\tserver_args\t\t= -s \\1'
       backrefs: yes
   when: "rhel6stig_tftp_required and 'tftp' in xinetd_services.stdout_lines"
-  ignore_errors: yes
+  failed_when: no
   tags:
       - cat1
       - high
