Updates to prelim and cat3

--- a/tasks/prelim.yml
+++ b/tasks/prelim.yml
@@ -106,6 +106,7 @@
   changed_when: false
   always_run: yes
   tags:
+      - cat3
       - umask
 
 - name: "PRELIM | Check for device files with unlabeled_t context"
@@ -159,15 +160,6 @@
       - cat3
       - auditd
 
-- name: "PRELIM | List setuid / setgid programs on all mounted filesystems"
-  shell: find $(lsblk -o MOUNTPOINT -n | grep '^/') -xdev -type f -perm /6000 2>/dev/null
-  changed_when: false
-  register: setugid_programs
-  tags:
-      - cat3
-      - low
-      - V-38567
-
 - name: "PRELIM | Get path of auditd log file"
   shell: "grep '^log_file' /etc/audit/auditd.conf | sed s/^[^\\/]*//"
   changed_when: no
@@ -181,6 +173,29 @@
       - auditd
       - patch
 
+- name: "PRELIM | List interface config files"
+  shell: ls /etc/sysconfig/network-scripts/ifcfg-eth* | grep -v $(date +%Y)
+  changed_when: false
+  register: interface_config_files
+  tags:
+      - cat2
+      - medium
+      - V-38679
+      - network
+      - dhcp
+      - patch
+
+- name: "PRELIM | List setuid / setgid programs on all mounted filesystems"
+  shell: find $(lsblk -o MOUNTPOINT -n | grep '^/') -xdev -type f -perm /6000 2>/dev/null
+  changed_when: false
+  register: setugid_programs
+  tags:
+      - cat3
+      - low
+      - V-38567
+      - auditd
+      - patch
+
 - name: "PRELIM | List /etc/fstab mount points"
   shell: awk '/^[^#]/ { print $2; }' /etc/fstab
   changed_when: false
@@ -190,4 +205,35 @@
       - medium
       - V-57569
       - fstab
+      - patch
+
+- name: "PRELIM | Check if the prelink package is installed."
+  command: rpm -q prelink
+  register: prelink_installed_audit
+  changed_when: false
+  failed_when: false
+  always_run: yes
+  tags:
+      - cat2
+      - prelink
+      - audit
+
+# Uninstalling the prelink package does not revert the libraries back
+# to their original state. We have to run "prelink -ua" as described
+# in https://access.redhat.com/solutions/512773
+- name: "PRELIM | Remove prelink data."
+  command: prelink -ua
+  when: prelink_installed_audit.rc == 0
+  tags:
+      - cat2
+      - prelink
+      - audit
+
+- name: "PRELIM | Remove the prelink package"
+  yum:
+      name: prelink
+      state: absent
+  tags:
+      - cat2
+      - prelink
       - patch
